--- a/开发手册.md
+++ b/开发手册.md
@@ -461,8 +461,8 @@ fsutil file createnew test.txt 字节数
 
 # adb命令
 
-adb logcat -c					清除日志
-adb logcat > D:\OPPOK5.txt	导出日志
+adb logcat -c
+adb logcat > C:\Users\howlett\Desktop\a.txt
 
 
 
