--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -161,7 +161,52 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 ## 适配器模式 adapter
 
-两个不兼容的接口之间的桥梁.这种模式涉及到一个单一的类，负责加入独立的或不兼容的接口功能。
+当原有接口与客户端不匹配 ,==无需修改原接口 .通过关联方式将对象放入适配器中== ,通过访问适配器的方法来间接操作对象 ,从而可以添加新的方法
+
+另一种方法	继承 ,通过子类来访问父类原有的功能
+
+![image-20200817085632182](image.assets/适配器模式.png)
+
+
+
+新闻联播为失聪人士提供了手语 ,让有障碍的人也能正常观看
+
+```
+public class AdapterPattern {
+    public static void main(String[] args) {
+    //通过Adapter适配器来操作Speaker对象
+        new Adapter(new Speaker()).translate();}
+}
+
+//被适配类
+class Speaker {
+    public String speak() {
+        return "搬砖";   }}
+
+//原接口
+interface Translator {
+    String translate();
+}
+
+class Adapter implements Translator {
+    private Speaker speaker;
+
+    public Adapter(Speaker speaker) {
+        this.speaker = speaker;}
+        
+	//适配器
+    @Override
+    public String translate() {
+        return "翻译之后" + speaker.speak();}}
+```
+
+
+
+### 适配器与装饰器区别
+
+适配器调节了原接口与被适配对象 ,==并未修改原接口==
+
+装饰器对原有接口作拓展 ,修改了原接口 
 
 
 
@@ -169,11 +214,9 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 ## 桥接 Bridge
 
-将**抽象与实现分离**，使它们可以独立变化。**用组合代替继承**来实现，降低了抽象和实现这两个可变维度的耦合度。
+将**抽象与实现分离**，使它们可以独立变化。**用组合代替继承实现**，降低了抽象和实现这两个可变维度的耦合度。
 
 
-
-![image-20200907093847193](image.assets/image-20200907093847193.png)
 
 
 
@@ -189,19 +232,151 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
-## 装饰 Decorator
+## 装饰器 Decorator
 
-动态的给对象增加一些职责，即增加其额外的功能。
+动态的给对象增加职责
 
-![image-20200907094246055](image.assets/image-20200907094246055.png)
+运用了关联关系 ,把对象嵌入到装饰器中 ,由装饰器内部操作对象
 
 
 
-## 外观 Facade
+![image-20200907094120213](image.assets/装饰器模式.png)
 
-为多个复杂的子系统提供一个**一致的接口**，使这些子系统更加容易被访问。
 
-![image-20200907094406997](image.assets/image-20200907094406997.png)
+
+```
+public class DecoratorPattern {
+
+    public static void main(String[] args) {
+    //装饰器的构造方法传入了FirstRobot对象,为原对象附加了新功能
+        new RobotDecorator(new FirstRobot()).doMorething(); }}
+
+//构件接口
+interface Robot {
+    void doSomething();
+}
+
+//被装饰的构件
+class FirstRobot implements Robot {
+    @Override
+    public void doSomething() {
+        System.out.println("搬砖");
+    }
+}
+
+//装饰器
+class RobotDecorator implements Robot {
+
+    private Robot robot;
+
+    public RobotDecorator(Robot robot) {
+        this.robot = robot;}
+
+    @Override
+    public void doSomething() { robot.doSomething();}
+
+	//新方法	doSomething接口方法未被修改
+    public void doMorething() {
+        robot.doSomething();
+        System.out.println("搬水泥"); }}
+```
+
+
+
+IO流大量运用装饰器模式 ,直接继承了InputStream的子类有
+
+* ByteArrayInputStream
+* FileInputStream
+* ObjectInputStream
+* PipedInputStream
+* StringBufferInputStream
+* ==FilterInputStream==
+
+![image-20200907094120213](image.assets/inputStream继承关系.png)
+
+FilterInputStream与其它子类不同
+
+```
+public class FilterInputStream extends InputStream {
+
+	//内部维护一个InputStream ,调用InputStream的方法
+    protected volatile InputStream in;
+
+    protected FilterInputStream(InputStream in) {
+        this.in = in;}
+    public int read() throws IOException {
+        return in.read(); }
+    public int read(byte b[]) throws IOException {
+        return read(b, 0, b.length); }
+    public int read(byte b[], int off, int len) throws IOException {
+        return in.read(b, off, len); }
+    public void close() throws IOException {
+        in.close();  }
+```
+
+FilterInputStream它什么事都不做 **,委托给内部的InputStream成员对象**
+
+
+
+FilterInputStream的又有其子类，分别是：
+
+* BufferedInputStream
+* DataInputStream
+* LineNumberInputStream
+* PushbackInputStream
+
+
+
+其中BufferedInputStream
+
+    public synchronized int read() throws IOException {
+    //当pos>=count时，需要缓冲数据，调用fill()将缓冲区加满
+        if (pos >= count) {
+            fill();
+            if (pos >= count)
+                return -1;
+        }
+        return getBufIfOpen()[pos++] & 0xff;}
+
+BufferedInputStream就是一个装饰器，==为InputStream加上缓冲功能== ,使得FileInputStream带有了缓冲功能
+
+```
+new BufferedInputStream(new FileInputStream(new File("")));
+```
+
+
+
+
+
+## 外观	Facade
+
+为==内部复杂的系统==提供一个**一致的接口**，使这些子系统更加容易被访问
+
+![image-20200817085632182](image.assets/外观模式.png)
+
+* 优点	内外部的通信通过**统一的通信对象**进行 ,通信对象是高层次的 ,将内部复杂的操作进行封装 ,使得外观上简洁 ,内部复杂
+* 缺点    **不符合开闭原则**	当内部发生改变时 ,外观也需要修改
+
+
+
+```
+public class FacadePattern {
+    public static void main(String[] args) {
+    //客户端调用外观的方法
+        new Facade().facadeMethod();
+    }
+}
+
+class Facade{
+	//由外观对象进行复杂操作
+    void facadeMethod(){
+        new SubFlow1().method1();
+        new SubFlow2().method2();}
+}
+
+class SubFlow1{ void method1(){}}
+class SubFlow2{ void method2(){}}
+```
 
 
 
@@ -209,7 +384,86 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 ## 享元 Flyweight
 
-运用共享技术来有效地支持大量细粒度对象的复用。
+运用共享 ,支持大量细粒度对象复用
+
+![image-20200907094120213](image.assets/享元模式.jpg)
+
+* 优点
+  * 减少相同或相似对象的创建 ,节约资源
+  * 享元对象的状态独立于外部环境  从而==可以在不同环境下被共享==
+
+* 缺点
+  * 需要分外部状态和内部状态 ,会导致系统复杂
+
+
+
+类似网盘 ,同一份资源被不同人保存 ,实际被保存的文件只有一份
+
+被保存的资源是对外一致的 ,被多人共享 ,是细粒度对象
+
+而每个人的保存时间 ,保存目录是不一致的 ,是粗粒度对象
+
+
+
+池技术	线程池 ,连接池 ,都是享元
+
+```
+public class FlyWeightPattern {
+    public static void main(String[] args) {
+        BikeFlyWeight bike = BikeFlyWeightFactory.getInstance().getBike();
+        //当享元对象使用中时,其他人将无法操作这个对象
+        bike.ride();
+        //释放享元对象回池子
+        bike.back(); }
+}
+
+//享元接口  需要定义状态属性,判断是否正在被使用  以及改变状态的方法
+abstract class BikeFlyWeight {
+    //0未使用    1使用中
+    protected Integer state = 0;
+
+    abstract void ride();
+    //释放享元对象回池子 状态置为0
+    void back() { state = 0; }
+
+    public Integer getState() {
+        return state;  }
+}
+
+class MoBikeFlyWeight extends BikeFlyWeight {
+    private String bikeId;
+
+    public MoBikeFlyWeight(String bikeId) {
+        this.bikeId = bikeId; }
+
+    @Override
+    void ride() {
+        state = 1;
+        System.out.println("使用中");  }
+}
+
+
+class BikeFlyWeightFactory {
+    private static BikeFlyWeightFactory instance = new BikeFlyWeightFactory();
+    private Set<BikeFlyWeight> pool = new HashSet<>();
+
+    public static BikeFlyWeightFactory getInstance() {
+        return instance; }
+
+    //向享元工厂加入享元对象
+    private BikeFlyWeightFactory() {
+        for (int i = 0; i < 2; i++) {
+            pool.add(new MoBikeFlyWeight(i + "号"));   }
+    }
+
+    //获取享元对象
+    public BikeFlyWeight getBike() {
+        for (BikeFlyWeight bike : pool) {
+            if (0 == bike.getState()) {
+                return bike; }     }
+        return null;  }
+}
+```
 
 
 
@@ -219,7 +473,11 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 为某对象提供一种代理以控制对该对象的访问。即客户端通过代理间接地访问该对象，从而限制、增强或修改该对象的一些特性。
 
-![image-20200907094607029](image.assets/image-20200907094607029.png)
+![image-20200907094120213](image.assets/代理模式.png)
+
+ ==访问控制理念==
+
+代理模式对客户端的访问限制思想同样运用在状态模式 ,策略模式等 ,根据状态或要执行的算法来限制去调用哪个方法 .一个业务往往需要结合多种设计模式来完成
 
 
 
@@ -227,9 +485,67 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
+```
+public class ProxyPattern {
+    public static void main(String[] args){
+        new RealSubjectProxy().doWork();  }}
+
+interface Subject { void doWork();}
+
+class RealSubject implements Subject {
+    @Override
+    public void doWork() {
+        System.out.println("搬砖");  }}
+
+//代理类
+class RealSubjectProxy implements Subject {
+    private RealSubject subject;
+    public RealSubjectProxy(){
+        //通过反射来加载类,从而让客户端无需传入参数
+     this.subject = (RealSubject) this.getClass().getClassLoader().loadClass("RealSubject").newInstance(); }
+
+    public void preMethod() { System.out.println("起床"); }
+    public void afterMethod() { System.out.println("睡觉"); }
+
+//通过代理可以为doWork()方法附加上前置和后置操作,增强了方法
+    @Override
+    public void doWork() {
+        preMethod();
+        subject.doWork();
+        afterMethod();  }}
+```
 
 
 
+
+
+
+
+
+
+静态代理缺点：
+
+- 代理类和目标对象的类都是在编译期间确定下来，不利于程序的扩展。
+- 每一个代理类只能为一个接口服务，这样一来程序开发中必然产生过多的代理。
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 动态代理
+
+
+
+- 动态代理是指客户通过代理类来调用其它对象的方法，在程序运行时根据需要动态创建目标类的代理对象
+- 抽象角色中（接口）声明的所有方法都被转移到调用处理器一个集中的方法中处理，这样，我们可以更加灵活和统一的处理众多的方法
 
 
 
@@ -243,27 +559,19 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
-## 职责链 Chain of Responsibility
-
-给多个对象处理请求的机会 ,减少发送者和接收者之间的耦合 ,把接收对象链接起来 ,在链中传递请求 ,直到请求被响应为止
 
 
+## 命令	Command：
 
-
+将一个请求封装为一个对象，从而可用不同的请求对客户进行参数化 ,将请求排队或记录请求日志 ,支持**可撤销**的操作 .使**发出请求的责任和执行请求的责任分离**
 
 
 
 
 
-1. 策略（Strategy）模式：定义了一系列**封装算法**，使它们可以相互替换，算法的改变不影响使用算法的客户
-2. 命令（Command）模式：将一个请求封装为一个对象，从而可用不同的请求对客户进行参数化 ,将请求排队或记录请求日志 ,支持**可撤销**的操作 .使**发出请求的责任和执行请求的责任分离**。
-3. 职责链（
-4. 状态（State）模式：允许一个对象在其**内部状态改变时改变其行为**。
-5. 观察者（Observer）模式：多个对象间存在一对多关系，当**对象发生改变时，通知给其他对象**，从而影响其他对象的行为。
-7. 迭代器（Iterator）模式：提供一种方法来顺序访问聚合对象中的一系列数据，而不暴露聚合对象的内部表示。
-8. 访问者（Visitor）模式：在不改变集合元素的前提下，为一个集合中的每个元素**提供多种访问方式**，从而在不改变个元素的类的前提下作用于这些元素的新操作。
-9. 备忘录（Memento）模式：在不破坏封装性的前提下，获取并保存一个对象的内部状态，以便以后恢复它。
-10. 解释器（Interpreter）模式：提供如何定义语言的文法，以及对语言句子的解释方法，即解释器。
+## 迭代器	Iterator
+
+提供一种方法来顺序访问聚合对象中的一系列数据，而不暴露聚合对象的内部表示
 
 
 
@@ -271,19 +579,182 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
+## 访问者	Visitor
+
+在不改变集合元素的前提下，为一个集合中的每个元素**提供多种访问方式**，从而在不改变个元素的类的前提下作用于这些元素的新操作
 
 
 
 
-## 模板方法TemplateMethod
 
-定义一个操作中的算法骨架，而**将算法的一些步骤延迟到子类**中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤。
+## 备忘录	Memento
+
+在不破坏封装性的前提下，获取并保存一个对象的内部状态，以便以后恢复它
 
 
 
-## 观察者 Observer
 
-一个观察者（Observer)观察一个被观察者（Subject)，**被观察者可以被多个观察者关注** ,Subject的状态发生变化时，Subject将通知所有的Observer，告知状态已经发生了变化，而Observer收到通知后，将查询Subject 的状态
+
+## 解释器	Interpreter
+
+提供如何定义语言的文法，以及对语言句子的解释方法，即解释器。
+
+
+
+
+
+
+
+
+
+## 模板方法	TemplateMethod
+
+定义一个操作中的算法骨架，而**将算法的一些步骤延迟到子类**中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤。==行为由父类控制 ,实现由子类完成==
+
+![image-20200907094120213](image.assets/模板方法.png)
+
+
+
+
+
+类似于菜谱 ,规定了菜谱的模板 ,厨师只需按照步骤进行炒菜
+
+```
+public class TemplateMethodPattern {
+    public static void main(String[] args) {
+        new CookingFood().cook(); }}
+
+//给出了cook()的模板,但具体的步骤step1,step2由子类来实现
+abstract class Cooking {
+    protected abstract void step1();
+    protected abstract void step2();
+    public void cook() {
+        step1();
+        step2();  }
+}
+
+//子类继承模板,实现模板中的抽象方法
+class CookingFood extends Cooking {
+    @Override
+    protected void step1() {
+        System.out.println("臭豆腐,腐乳"); }
+    @Override
+    protected void step2() {
+        System.out.println("面包片,老干妈"); }}
+```
+
+
+
+
+
+## 观察者(发布/订阅) Observer
+
+观察者与被观察者存在多对一关系 ,1个被观察者发生状态改变 ,将通知1~n个观察者 ，而Observer收到通知后，将查询Subject 的状态
+
+
+
+```
+public class ObserverPattern {
+    public static void main(String[] args) {
+        Debit zhangSan = new ZhangSan();
+        zhangSan.borrow(new WangWu());
+        zhangSan.notifyCredits();
+    }
+}
+
+//借钱接口  有借钱/通知贷款人方法 当状态改变将触发notifyCredits()
+interface Debit {
+    void borrow(Credit credit);
+    void notifyCredits();
+}
+
+//贷款接口  抽象收钱方法
+interface Credit {
+    void takeMoney();
+}
+
+//借款人   维护需要通知的对象,放入List
+class ZhangSan implements Debit {
+    List<Credit> list = new ArrayList<>();
+    //状态标识  状态改变将进行通知
+    private Integer state = 0;
+
+    //将需要通知的对象放入列表
+    @Override
+    public void borrow(Credit credit) {
+        list.add(credit);
+    }
+
+    //状态改变触发通知
+    @Override
+    public void notifyCredits() {
+        list.forEach(Credit::takeMoney);
+    }
+}
+
+//贷款人
+class WangWu implements Credit {
+    @Override
+    public void takeMoney() {
+        System.out.println("王五拿钱"); }
+}
+```
+
+
+
+### 回调	特殊观察者
+
+
+
+A向B提问，B思考一会儿，得到答案通知A
+
+A中
+
+```
+创建B的实例	new B();
+给B set回调函数,传入回调函数的参数
+调用B的执行回调函数方法
+```
+
+B中：
+
+```
+对外提供传入回调函数的set方法
+定义执行回调函数的方法
+```
+
+
+
+==回调函数只有1个观察者 ,1个被观察者 ,当A把回调函数set进B时 ,将调用B的执行回调函数方法 ,通知B可以开始执行==
+
+```
+//回调函数接口
+interface Callback {
+    void callbackByTel(String answer);}
+
+class A {
+    public static void main(String[] args) {
+        B b = new B();
+        //向b传入将传入参数打印的回调函数
+        b.setCallBack(System.out::println);
+        //调用b的执行回调函数方法
+        b.handleQustion();}
+}
+
+class B {
+    private Callback callback;
+
+    //对外提供传入回调函数的set方法
+    public void setCallBack(Callback callback) {
+        this.callback = callback;  }
+
+    //执行回调函数的方法
+    public void handleQustion() {
+        callback.callbackByTel("搬砖");  }
+}
+```
+
+
 
 
 
@@ -298,6 +769,161 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
+
+## 状态	State
+
+枚举所有状态 ,将对象的转换规则以及执行的行为进行封装 ,允许一个对象在其**内部状态改变时改变其行为**
+
+==状态对象被多个环境对象共享==
+
+
+
+* 缺点	会增加系统中类的个数 (状态类)
+
+
+
+```
+public class StatePattern {
+    public static void main(String[] args) {
+        Context context = new Context();
+        //在改变了环境对象的状态属性后,将执行该状态的方法
+        context.changeState(new Happy());
+        context.doSomeThing();   }}
+
+//状态的抽象类	将不同状态下的不同行为抽象为doWork()方法
+abstract class State {
+    abstract void doWork();}
+
+class Happy extends State {
+    @Override
+    void doWork() {
+        System.out.println("开心搬砖");  }}
+
+class Sad extends State {
+    @Override
+    void doWork() {
+        System.out.println("伤心摸鱼"); }}
+
+//环境类内部维护状态,对外提供改变状态的方法
+class Context {
+    private State state;
+
+    public void changeState(State state) {
+        this.state = state;}
+
+    public void doSomeThing() {
+        state.doWork();}}
+```
+
+
+
+
+
+## 责任链	Chain of Responsibility
+
+给多个对象处理请求的机会 ,==减少发送者和接收者之间的耦合== ,把接收对象链接起来 ,在链中传递请求 ,直到请求被响应为止
+
+![image-20200907094120213](image.assets/责任链模式.png)
+
+
+
+* 优点
+  * 请求者不需要知道谁来处理 ,**处理者不知道请求的全貌**
+  * 灵活性高 ,易于新增处理器
+
+* 缺点
+  * 降低系统性能 ,责任链较长时 ,需要等待较长时间
+  * 不利于调试 ,类似于递归 ,会导致不知道到底是谁处理了请求
+
+
+
+```
+public class ChainRespPattern {
+    public static void main(String[] args) {
+        Handler leaderA = new Leader();
+        Handler boss = new Boss();
+        //为Leader设置高级负责人
+        leaderA.setNextHandler(boss);
+        //虽然一开始是Leader负责,但Leader权限不足,将责任流转到nextHandler
+        leaderA.process(20);  }
+}
+
+//责任人接口,内部维护高一级的责任人nextHandler,形成责任链
+abstract class Handler {
+    protected Handler nextHandler;
+
+    //责任流转接口,寻找能处理业务的负责人
+    public abstract void process(Integer info);
+
+    public void setNextHandler(Handler nextHandler) {
+        this.nextHandler = nextHandler;  }
+}
+
+class Leader extends Handler {
+    @Override
+    public void process(Integer info) {
+        //参数大于10时,Leader权限不足,将责任流转给Boss
+        if (info > 10) {
+            nextHandler.process(info);   }   }}
+
+class Boss extends Handler {
+    @Override
+    public void process(Integer info) {
+        System.out.println("Boss处理");  }}
+```
+
+
+
+
+
+## 策略	Strategy
+
+定义一系列**封装算法**，使它们可以相互替换，算法的改变不影响使用算法的客户
+
+
+
+![image-20200907094120213](image.assets/策略.png)
+
+JDK8中 ,ThreadPoolExecutor的构造方法可以传入RejectedExecutionHandler拒绝策略接口
+
+拒绝策略是当有界队列满了时，拒绝添加到线程池
+
+```
+public ThreadPoolExecutor(int corePoolSize,
+                          int maximumPoolSize,
+                          long keepAliveTime,
+                          TimeUnit unit,
+                          BlockingQueue<Runnable> workQueue,
+                          ThreadFactory threadFactory,
+                          //策略接口
+                          RejectedExecutionHandler handler)
+```
+
+
+
+每个拒绝策略接口的实现类都封装了拒绝的算法 ,在构造方法中传入策略 ,从而使得线程池具有对应的算法
+
+```
+public static class AbortPolicy implements RejectedExecutionHandler {
+
+    public AbortPolicy() { }
+    public void rejectedExecution(Runnable r, ThreadPoolExecutor e) {
+        throw new RejectedExecutionException("Task " + r.toString() +
+                                             " rejected from " +
+                                             e.toString());  }}
+```
+
+
+
+### 策略模式和状态模式
+
+* 相同
+  * 策略模式关注多种算法的内容
+
+  * 状态模式关注多种状态的改变
+
+* 不同
+  * 2者都封装了执行的函数在环境类中 ,由环境类决定执行哪个函数
 
 
 
