--- a/计算机网络.md
+++ b/计算机网络.md
@@ -4,6 +4,8 @@
 
 ![七层模型](image.assets/七层模型.png)
 
+![image-20200818075601488](image.assets/image-20200818075601488.png)
+
 ## 应用层
 
 ### 基于TCP
@@ -42,7 +44,7 @@ NFS					网络文件系统
 
 
 
-## 传输层 
+## 传输层
 
 TCP
 
@@ -102,26 +104,6 @@ TokingRing	令牌环
 
 
 
-# 协议
-
-![image-20200818075601488](image.assets/image-20200818075601488.png)                  
-
-
-
-TLS      安全传输层协议,保密,数据完整
-
-SSL       安全套接层  ,                ,与TLS类似,都是传输层
-
-PGP      基于RSA公钥的**邮件加密**
-
-IPSec     网络层的加密安全协议
-
-SSL/HTTPS /PGP    跟邮件服务有关
-
-
-
- 
-
 序列号seq：4个字节，用来标记数据段的顺序，TCP把连接中发送的所有数据字节都编上一个序号，第一个字节的编号由本地随机产生；给字节编上序号后，就给每一个报文段指派一个序号
 
 确认号ack：4个字节，期待收到对方下一个报文段的第一个数据字节的序号
@@ -136,7 +118,7 @@ SSL/HTTPS /PGP    跟邮件服务有关
 
 大写表示标志位, 其值要么是1，要么是0；ack、seq小写的单词表示序号
 
-# *TCP 面向连接的运输*
+# TCP 面向连接的运输
 
 差错检测,重传,累积确认,定时器,用于序号和确认号的首部字段
 
@@ -154,7 +136,7 @@ SSL/HTTPS /PGP    跟邮件服务有关
 
  
 
-### **三次握手:(让我知道你已经知道)**
+## 三次握手(让我知道你已经知道)
 
  ![image-20200808145256159](image.assets\三次握手.png)
 
@@ -166,9 +148,11 @@ SSL/HTTPS /PGP    跟邮件服务有关
 
  
 
-前两次握手不包含应用层数据,第三次可以包含
+==前两次握手不包含应用层数据==,第三次可以包含
 
-### **四次挥手**
+
+
+## 四次挥手
 
 ![image-20200808145332193](image.assets\四次挥手.png) 
 
@@ -184,31 +168,25 @@ SSL/HTTPS /PGP    跟邮件服务有关
 
 6）服务器只要收到了客户端发出的确认，立即进入CLOSED状态。可以看到，服务器结束TCP连接的时间要比客户端早一些。
 
-# *面试题*
+## **为什么连接时三次，关闭时四次？**
 
-#### **为什么连接时三次，关闭时四次？**
+当Server端收到Client端的SYN连接请求报文后，可以直接发送SYN+ACK报文。其中ACK报文是用来应答的，SYN报文是用来同步的。但是关闭连接时，当Server端收到FIN报文时，很可能并不会立即关闭SOCKET，所以只能先回复一个ACK报文，等所有的报文都发送完了，才能发送FIN报文，由于FIN和ACK不能一起发送。故需要四步握手。
 
-答：因为当Server端收到Client端的SYN连接请求报文后，可以直接发送SYN+ACK报文。其中ACK报文是用来应答的，SYN报文是用来同步的。但是关闭连接时，当Server端收到FIN报文时，很可能并不会立即关闭SOCKET，所以只能先回复一个ACK报文，等所有的报文都发送完了，才能发送FIN报文，由于FIN和ACK不能一起发送。故需要四步握手。
-
-#### **为什么TIME_WAIT状态要经过2MSL才能进入CLOSE状态？**
+## **为什么TIME_WAIT状态要经过2MSL才能进入CLOSE状态？**
 
 虽然按道理，四个报文都发送完毕，我们可以直接进入CLOSE状态了，但是我们必须假象网络是不可靠的，有可以最后一个ACK丢失。所以TIME_WAIT状态就是用来重发可能丢失的ACK报文。Client发送出最后的ACK可能会丢失。Server如果没有收到ACK，将不断重复发送FIN片段。所以Client不能立即关闭，它必须确认Server接收到了该ACK。Client会在发送出ACK之后进入到TIME_WAIT状态。Client会设置一个计时器，等待2MSL的时间。如果在该时间内再次收到FIN，那么Client会重发ACK并再次等待2MSL。所谓的2MSL是两倍的最长报文段寿命，也是单次发送和回复所需的最大时间。如果直到2MSL，Client都没有再次收到FIN，那么Client推断ACK已经被成功接收，则结束TCP连接。
 
-#### **为什么不能用两次握手？**
+## **为什么不能用两次握手？**
 
 3次握手的基本思想是”让我知道你已经知道”,既要双方做好发送数据的准备工作，也要允许双方就初始序列号进行协商，这个序列号在握手过程中被发送和确认。
 
 ​    现在把三次握手改成仅需要两次握手，死锁是可能发生的。作为例子，考虑计算机S和C之间的通信，假定C给S发送一个连接请求分组，S收到了这个分组，并发 送了确认应答分组。按照两次握手的协定，S认为连接已经成功地建立了，可以开始发送数据分组。可是，C在S的应答分组在传输中被丢失的情况下，将不知道S 是否已准备好，不知道S建立什么样的序列号，C甚至怀疑S是否收到自己的连接请求分组。在这种情况下，C认为连接还未建立成功，将忽略S发来的任何数据分 组，只等待连接确认应答分组。而S在发出的分组超时后，重复发送同样的分组。这样就形成了死锁。
 
-#### **已经建立连接，客户端突然故障怎么办？**
+## **已经建立连接，客户端突然故障怎么办？**
 
 TCP还设有一个保活计时器，显然，客户端如果出现故障，服务器不能一直等下去，白白浪费资源。服务器每收到一次客户端的请求后都会重新复位这个计时器，时间通常是设置为2小时，若两小时还没有收到客户端的任何数据，服务器就会发送一个探测报文段，以后每隔75秒发送一次。若一连发送10个探测报文仍然没反应，服务器就认为客户端出了故障，接着就关闭连接。
 
-# *127.0.0.1 本地环回地址(loopback)*
 
-在请求/接受数据时, client和server需要两个不同的ip地址。
-要在本地测试时, 可以将我们本地ip当做客户端的地址,再把127.0.0.1当做服务器server的地址, 
-这样一来，客户端向127.0.0.1发送请求, 就会从127.0.0.1得到返回数据。
 
 
 
@@ -245,6 +223,14 @@ C类	11000000-11011111	198-223
 主机700台 ,需要10位主机号	总共16位主机号 ,划分6位到网络号
 
 答案	255.255.252.0
+
+
+
+## *127.0.0.1 本地环回地址(loopback)*
+
+在请求/接受数据时, client和server需要两个不同的ip地址。
+要在本地测试时, 可以将我们本地ip当做客户端的地址,再把127.0.0.1当做服务器server的地址, 
+这样一来，客户端向127.0.0.1发送请求, 就会从127.0.0.1得到返回数据。
 
 
 
@@ -346,7 +332,7 @@ bgcolor	文档整体背景颜色
 
 # 对称加密与非对称加密
 
-对称加密	双方使用同一套密钥	**加密强度低** ,**密钥分发困难** ,但效率高 ,
+对称加密	加密解密同一套密钥	**加密强度低** ,**密钥分发困难** ,但效率高 ,
 
 ​		加密算法	DES	3DES	RC-5	IDEA
 
@@ -370,7 +356,7 @@ bgcolor	文档整体背景颜色
 
 ## 信息摘要
 
-对比发送方发送的摘要 ,和接收方算出的摘要是否相同 ,判断文件有没有被篡改
+对比发送和接收的摘要是否相同 ,判断文件是否被篡改
 
 
 
@@ -396,7 +382,15 @@ bgcolor	文档整体背景颜色
 
 ![image-20200823134652357](image.assets/image-20200823134652357.png)
 
+TLS      安全传输层协议,保密,数据完整
 
+SSL       安全套接层  ,                ,与TLS类似,都是传输层
+
+PGP      基于RSA公钥的**邮件加密**
+
+IPSec     网络层的加密安全协议
+
+SSL/HTTPS /PGP    跟邮件服务有关
 
 
 
