--- a/算法与数据结构.md
+++ b/算法与数据结构.md
@@ -284,11 +284,9 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
-完全图
-
-​	每对顶点都有一条边相连的无向图
-
-​	每对顶点都有2条有向边互相连接的有向图
+* 完全图
+  * 每对顶点都有一条边相连的无向图
+  * 每对顶点都有2条有向边互相连接的有向图
 
 ![image-20200914071713776](image.assets/image-20200914071713776.png)
 
@@ -319,6 +317,18 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 V1 ->2 6 -> 4 1
 
 代表V1 -> V2距离4 ,V1 -> V4距离1
+
+
+
+
+
+==完全图适合采用邻接矩阵存储==
+
+**图的顶点数决定了邻接矩阵的阶和邻接表中的单链表数目**
+
+无论是对有向图还是无向图，**边数的多少决定了单链表中的结点数，而不影响邻接矩阵的规模**，因此完全图适合采用邻接矩阵存储。
+
+
 
 
 
