--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -1260,7 +1260,31 @@ extend:	转向执行另一个用例，执行完后返回之前的用例
 
 
 
-## 耦合
+
+
+
+
+# 内聚与耦合
+
+
+
+* 内聚
+
+①偶然内聚	各个处理元素之间没有任何联系。
+
+②逻辑内聚	执行逻辑上相似的功能，**通过参数确定完成哪个功能**
+
+③时间内聚	**同时执行的动作组合在一起**
+
+④通信内聚	所有处理元素在**同一个数据结构**上操作，或者指各处理使用**相同的输入/输出数据**
+
+⑤顺序内聚	各个处理元素必须顺序执行，==前一个功能元素的输出是下一个功能元素的输入==
+
+⑥功能内聚	==最强的内聚==，所有元素**共同完成一个功能，缺一不可**
+
+
+
+* 耦合
 
 数据耦合:两个模块彼此间通过数据参数交换信息
 
