--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -201,11 +201,35 @@ r 校验位		m数据位
 
 
 
-
-
-
-
 ![image-20200829112508035](image.assets/image-20200829112508035.png)
+
+
+
+
+
+假设一台按字节编址的16位计算机系统，采用虚拟页式存储管理方案，页面的大小为2K，且系统中没有使用快表（或联想存储器)。某用户程序如图a所示，该程序的页面变换表如图b所示，表中状态位等于1和0分别表示页面在内存或不在内存。
+
+![img](image.assets/wps1.png) 
+
+　　图a中MOVE Datal, Data2是一个4字节的指令，Datal和Data2表示该指令的两个32位操作数。假设MOVE指令存放在2047地址开始的内存单元中，Datal存放在6143 地址开始的内存单元中，Data2存放在10239地址开始的内存单元中，那么执行MOVE 指令将产生（26)次缺页中断,其中：取指令产生（27)次缺页中断，取Datal和 Data2操作数分别产生（28)次缺页中断。
+
+(26)A.3				B.4				C.5				D.6
+
+(27)A.0				B.1				C.2				D.3
+
+(28)A.1、1			B.1、2			C.2、2			D.2、3
+
+答案】C  B  C
+
+【解析】本题考查操作系统中系统内存管理方面的知识
+
+从题图中可见，程序的MOVE指令跨两个页面，且源地址Datal和目标地址Data2所涉及的区域也跨两个页面的页内地址， 根据题意1、2、3、4和5号页面不在内存，系统取“MOVE Datal，Data2”的指令时， 由于该指令跨越两个页面0、1，查页面变换表可以发现1号页面不在内存，故需要产生一次缺页中断；取地址为Datal的操作数时，由于该操作数不在内存且跨两个页面2、3, 需要将2、3页面装入内存，所以产生两次缺页中断；同理，取地址为Data2的操作数时， 由于该操作数不在内存且跨两个页面4、5,需要将4、5页面装入内存，所以产生两次缺页中断，共产生5次缺页中断。
+
+
+
+
+
+
 
 
 
@@ -508,7 +532,7 @@ cache组号+组内页号+页内地址
 
 
 
-# 主机与外设间进行数据传输的输入输出控制方法
+# 主机/外设数据传输控制方法
 
 * 程序控制方式，由**CPU**执行程序控制数据的输入输出过程。
 
