--- a/算法与数据结构.md
+++ b/算法与数据结构.md
@@ -448,11 +448,23 @@ N皇后 ,迷宫 ,背包
 
 
 
-与树有关的都有log
+二分查找       对数级别       logN
+
+循环           线性级别       N
+
+归并(分治思想)   线性对数级别    NlogN
+
+穷举           指数级别       2^N
+
+**堆排序**						nlog2n
 
 
 
-nlog2n	**堆排序**
+==与树有关的都有log==
+
+
+
+
 
 
 
