--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -173,7 +173,7 @@ r 校验位		m数据位
 
 
 
-采用分页存储管理方式，下图给出了进程A和进程B的页表结构。如果物理页的大小为1K字节，那么进程A中逻辑地址为1024 (十进制)用变量存放在（3）号物理内存页中。
+采用分页存储管理方式，下图给出了进程A和进程B的页表结构。如果物理页的大小为1K字节，那么进程A中逻辑地址为1024存放在**（3）**号物理内存页中
 
 ![image-20200908121812016](image.assets/image-20200908121812016.png)
 
@@ -532,7 +532,7 @@ cache组号+组内页号+页内地址
 
 
 
-# 主机/外设数据传输控制方法
+## 主机/外设数据传输控制方法
 
 * 程序控制方式，由**CPU**执行程序控制数据的输入输出过程。
 
@@ -634,7 +634,7 @@ a++		1地址
 
 
 
-# CISC/RISC
+## CISC/RISC
 
 
 
@@ -923,6 +923,18 @@ SPOOLING是关于慢速字符设备如何与计算机主机交换信息的一种
 ![](image.assets/超标量流水线.png)
 
 度为流水线条数		度为2的超标量流水线能同时执行2个操作
+
+
+
+
+
+![](image.assets/缓冲区.png)
+
+![](image.assets/缓冲区2.png)
+
+
+
+
 
 
 
