--- a/算法与数据结构.md
+++ b/算法与数据结构.md
@@ -476,7 +476,11 @@ N皇后 ,迷宫 ,背包
 
 (65)A.O(n)       B.O(nlgn)      C.O(n²)       D.O(n²lgn)
 
-插入排序对基本有序的数组排序速度快；插入排序的时间复杂度都是O(n)
+==插入排序对基本有序的数组排序速度快==；
+
+**插入排序的时间复杂度都是O(n)**
+
+
 
 
 
