--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -6,13 +6,13 @@
 
 ## 短除法
 
-![image-20200829103804760](image.assets/image-20200829103804760.png)
+![](image.assets/image-20200829103804760.png)
 
 
 
 ## 分割法
 
-![image-20200829104152658](image.assets/image-20200829104152658.png)
+![](image.assets/image-20200829104152658.png)
 
 
 
@@ -72,7 +72,9 @@
 
 ![image-20200831111344389](image.assets/image-20200831111344389.png)
 
-小数点不占位数	
+
+
+一个数的浮点表示不是唯一的。当小数点的位置改变时，阶码也相应改变，因此可以用多种浮点形式表示同一个数
 
 **补码和移码没有-0 只有0**
 
@@ -81,6 +83,8 @@
 ## 浮点数
 
 N = 尾数*基数^阶码
+
+==小数点不占位数==,靠尾数和阶码定位小数点	所以==一个数的浮点数不唯一==,多种浮点数可以表示同一个数
 
 
 
@@ -444,6 +448,12 @@ DMA(Direct Memory Access，直接内存存取)，允许**不同速度**的硬件
 
 
 
+虚拟存储器	比主存更大,可随机访问地址空间
+
+虚拟存储技术使==辅存和主存==密切配合， 对用户来说，好像计算机具有一个容量比实际主存大得多的主存可供使用，因此称为虚拟存储器。**虚拟存储器的地址称为虚地址或逻辑地址**
+
+
+
 ## Cache
 
 
@@ -552,11 +562,11 @@ cache组号+组内页号+页内地址
 
 
 
-* 数据总线	在CPU和RAM之间传输数据
+* 数据总线DB	在CPU和RAM之间传输数据
 
-* 地址总线	指定在RAM中存储的数据的地址
+* 地址总线AB	指定在RAM中存储的数据的地址
 
-* 控制总线	将微处理器控制单元的信号传送到周边设备
+* 控制总线CB	将微处理器控制单元的信号传送到周边设备
 
 
 
@@ -810,15 +820,25 @@ C.P(S2) P(S5)和 P(S4) P(S6)   D.P(S4) V(S5)和 P(S5) V(S6)
 
 
 
-
-
 程序计数器/寄存器/栈 是线程私有的,其余资源被各个线程共享
 
  
 
+## 阻塞
 
 
 
+进程资源图如图(a)和(b)所示，其中：图(a)中（25);图(b)中（26)。
+
+![](image.assets/进程资源图.jpg) 
+
+(a)图
+
+R1资源只有2个，P2申请该资源得不到满足，故进程P2是阻塞节点；同样R2资源只有3个，P1申请该资源得不到满足，故进程P1也是阻塞节点。可见进程资源图（a）是死锁的，该图不可以化简。
+
+(b)图
+
+R2资源有3个，已分配2个，P3申请1个R2资源可以得到满足，故进程P3可以运行完毕释放其占有的资源。这样可以使得Pl、P2都变为非阻塞节点，得到所需资源运行完毕，因此，进程资源图（b)是可化简的
 
 
 
@@ -948,9 +968,21 @@ SPOOLING是关于慢速字符设备如何与计算机主机交换信息的一种
 
 
 
+# 中断
+
+
+
+当系统中有多个中断请求时，中断系统**按优先级进行排队**
+
+在处理低级中断过程中又有高级中断申请中断，则高级中断可以打断低级中断处理，转去处理高级中断，等处理完高级中断后再返回去处理原来的低级中断，称为**中断嵌套**。实现中断嵌套用后进先出的栈来保护断点和现场最有效.
+
+
+
+
+
 # 冗余技术
 
-冗余是指对于实现系统规定功能是多余的那部分资源，包括硬件、软件、信息和时间。
+对于实现系统规定功能是多余的资源，包括硬/软件、指令,数据,存放和调用的空间和通道
 
 * 结构冗余，按其工作方法可以分为静态、动态和混合冗余
 * 信息冗余，指的是为了检测或纠正信息在运算或传输中的错误另外加的一部分信息
