--- a/软件设计师/多媒体+知识产权.md
+++ b/软件设计师/多媒体+知识产权.md
@@ -68,9 +68,9 @@ kHz	而选项都是kb ,所以无需转化为更小的单位
 
 
 
-* 感觉媒体	直接作用于人的感觉器官
+* **感觉媒体**	直接作用于人的感觉器官
   * 声音
-  * 图像/动画
+  * **图像**/动画
 
 * 表示媒体	**用于传输或加工感觉媒体**
   * 编码方式 (文本/图像/声音编码)
