--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -145,11 +145,24 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
-## 生成器/建造者/构建器 Builder
+## 生成器/建造者 Builder
 
 将一个复杂对象分解成多个相对简单的部分，然后根据不同需要分别创建它们，最后构建成该复杂对象。
 
 
+
+```java
+    public static void main(String[] args) {
+		//复杂对象House下有若干子对象,为了创建house,一种方法是全写在构造器中,但这将使构造方法变得过于复杂
+      //另一种是用Builder来负责进行对象的创建
+        new House.HouseBuilder().window().door().build()    }
+
+@Data
+@Builder
+class House{
+    private Window window;
+    private Door door;}
+```
 
 
 
@@ -563,7 +576,7 @@ class RealSubjectProxy implements Subject {
 
 ## 命令	Command：
 
-将一个请求封装为一个对象，从而可用不同的请求对客户进行参数化 ,将请求排队或记录请求日志 ,支持**可撤销**的操作 .使**发出请求的责任和执行请求的责任分离**
+将==请求封装为对象==，从而可用不同的请求对客户进行参数化,将==请求排队或记录请求日志==,支持**可撤销**的操作 .使**发出请求的责任和执行请求的责任分离**
 
 
 
@@ -1140,7 +1153,21 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 ## 状态图
 
+* 用于描述一个对象在多个用例中的行为
+
+* 用于某些具有多个状态的对象而不是系统中大多数或全部对象
+
+* 可以用于**用户界面或控制对象**
+
+
+
+状态的父状态成为**超状态**
+
+
+
 ![image-20200906231216567](image.assets/image-20200906231216567.png)
+
+
 
 与活动图类似 ,重点反映状态的转化		箭头上的注释也倾向于状态
 
