--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -4,13 +4,13 @@
 
 
 
-## 短除法
+* 短除法
 
 ![](image.assets/image-20200829103804760.png)
 
 
 
-## 分割法
+* 分割法
 
 ![](image.assets/image-20200829104152658.png)
 
@@ -18,7 +18,7 @@
 
 ## 数据的表示
 
-![image-20200829105108721](image.assets/image-20200829105108721.png)
+![](image.assets/image-20200829105108721.png)
 
 对于计算 1-1	可以视为1+(-1)
 
@@ -26,57 +26,19 @@
 
 * 正数 
 
-**原反补相同**
-
-
+  * **原反补相同**
 
 * 负数
 
-反码	除符号位以外 ,全部取反
+  * 反码	除符号位以外 ,全部取反
+  * 补码	反码基础上+1			**用于加减计算**	对于1-1 ,只有补码是全0
+  * 移码	补码基础上 ,符号位取反	**用于浮点数计算** ,移码有-0 ,不适合用于计算
 
-**补码**	反码基础上+1							用于加减计算	对于1-1 ,只有补码是全0
-
-移码	补码基础上 ,符号位取反			用于浮点数计算 ,移码有-0 ,不适合用于计算
-
-
-
-**原/反 有-0**			**补/移只没有-0**
+* **原/反 有-0,**补/移只有0
 
 
-
-## 海明校验码
-
-**多组**数位的奇偶校验 ,**纠错**
-
-在数据位后面增加一些比特 ,检验数据有效性
-
-**1个以上的校验位**
-
-为了保证能够纠错 ,码间最小距离3
-
-​	2k-1>=n+k	k海明码个数 ,n数据位个数
-
-
-
-## 循环冗余校验码(CRC)
-
-在k位信息码后再拼接r位的校验码，长度为k+r位的编码，
-
-检错能力极强且开销小，易于用**编码器及检测电路**实现
-
-**不能纠错**
-
-
-
-## 数值表示范围
 
 ![image-20200831111344389](image.assets/image-20200831111344389.png)
-
-
-
-一个数的浮点表示不是唯一的。当小数点的位置改变时，阶码也相应改变，因此可以用多种浮点形式表示同一个数
-
-**补码和移码没有-0 只有0**
 
 
 
@@ -84,7 +46,7 @@
 
 N = 尾数*基数^阶码
 
-==小数点不占位数==,靠尾数和阶码定位小数点	所以==一个数的浮点数不唯一==,多种浮点数可以表示同一个数
+==小数点不占位数==,靠尾数和阶码定位小数点,所以==一个数的浮点数不唯一==,多种浮点数可以表示同一个数
 
 
 
@@ -141,6 +103,32 @@ N = 尾数*基数^阶码
 将余数拼接到后面 ,再次进行除法 ,如果仍能除尽 ,则正确
 
 ![image-20201004102123297](image.assets/image-20201004102123297.png)
+
+
+
+
+
+
+
+## 海明校验码
+
+**多组**数位的奇偶校验,在数据位后面增加一些比特 ,**能纠错**
+
+**1个以上的校验位**
+
+为了保证能够纠错,码间**最小距离3**
+
+​	2^k-1>=n+k	k海明码个数 ,n数据位个数
+
+
+
+## 循环冗余校验码(CRC)
+
+在k位信息码后再拼接r位的校验码，长度为k+r位的编码，
+
+检错能力极强且开销小，易于用**编码器及检测电路**实现,**不能纠错**
+
+
 
 
 
