--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -38,7 +38,7 @@
 
 
 
-![image-20200831111344389](image.assets/image-20200831111344389.png)
+![](image.assets/image-20200831111344389.png)
 
 
 
@@ -76,7 +76,7 @@ N = 尾数*基数^阶码
 
 
 
-![image-20201004100508843](image.assets/image-20201004100508843.png)
+![](image.assets/image-20201004100508843.png)
 
 并不是4	而是考虑最小
 
@@ -96,13 +96,13 @@ N = 尾数*基数^阶码
 
 在k位信息码之后拼接r位校验码 ,利用了**模2除法**进行校验
 
-只能检错 **,不能纠错**
+只能检错 **,不能纠错**		易于用**编码器及检测电路**实现
 
-![image-20201004101841660](image.assets/image-20201004101841660.png)
+![](image.assets/image-20201004101841660.png)
 
 将余数拼接到后面 ,再次进行除法 ,如果仍能除尽 ,则正确
 
-![image-20201004102123297](image.assets/image-20201004102123297.png)
+![](image.assets/image-20201004102123297.png)
 
 
 
@@ -122,22 +122,6 @@ N = 尾数*基数^阶码
 
 
 
-## 循环冗余校验码(CRC)
-
-在k位信息码后再拼接r位的校验码，长度为k+r位的编码，
-
-检错能力极强且开销小，易于用**编码器及检测电路**实现,**不能纠错**
-
-
-
-
-
-## 海明码	能纠错
-
-2^r >= m +r +1
-
-r 校验位		m数据位
-
 
 
 
@@ -146,9 +130,9 @@ r 校验位		m数据位
 
 # 存储管理
 
+
+
 ## 页式存储
-
-
 
 将程序与内存划分为同样大小的块 ,以页单位将程序调入内存
 
@@ -167,7 +151,7 @@ r 校验位		m数据位
 
 采用分页存储管理方式，下图给出了进程A和进程B的页表结构。如果物理页的大小为1K字节，那么进程A中逻辑地址为1024存放在**（3）**号物理内存页中
 
-![image-20200908121812016](image.assets/image-20200908121812016.png)
+![](image.assets/image-20200908121812016.png)
 
 
 
@@ -177,7 +161,7 @@ r 校验位		m数据位
 
 某进程有5个页面，页号为0〜4,页面变换表如下所示。表中状态位等于0和1分 别表示页面不在内存或在内存。若系统给该进程分配了3个存储块，当访问的页面3不在内存时，应该淘汰表中页号为（25）的页面。假定页面大小为4KB，逻辑地址为十六进制2C25H,该地址经过变换后，其物理地址应为十六进制（26)。
 
-![img](image.assets/clip_image002.jpg)
+![](image.assets/clip_image002.jpg)
 
 (25)A.0       B.1       C.2       D.4
 
@@ -193,7 +177,7 @@ r 校验位		m数据位
 
 
 
-![image-20200829112508035](image.assets/image-20200829112508035.png)
+![](image.assets/image-20200829112508035.png)
 
 
 
@@ -201,7 +185,7 @@ r 校验位		m数据位
 
 假设一台按字节编址的16位计算机系统，采用虚拟页式存储管理方案，页面的大小为2K，且系统中没有使用快表（或联想存储器)。某用户程序如图a所示，该程序的页面变换表如图b所示，表中状态位等于1和0分别表示页面在内存或不在内存。
 
-![img](image.assets/wps1.png) 
+![](image.assets/wps1.png) 
 
 　　图a中MOVE Datal, Data2是一个4字节的指令，Datal和Data2表示该指令的两个32位操作数。假设MOVE指令存放在2047地址开始的内存单元中，Datal存放在6143 地址开始的内存单元中，Data2存放在10239地址开始的内存单元中，那么执行MOVE 指令将产生（26)次缺页中断,其中：取指令产生（27)次缺页中断，取Datal和 Data2操作数分别产生（28)次缺页中断。
 
@@ -227,7 +211,7 @@ r 校验位		m数据位
 
 ## 段式存储
 
-![image-20200829113601792](image.assets/image-20200829113601792.png)
+![](image.assets/image-20200829113601792.png)
 
 对于上图 ,合法段	0-25K		
 
