--- a/算法与数据结构.md
+++ b/算法与数据结构.md
@@ -206,6 +206,90 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
+# 堆
+
+
+
+堆就是用数组实现的二叉树，根据**堆属性**来排序，堆属性决定了树中节点的位置。
+
+堆分为两种：最大堆和最小堆，两者的差别在于节点的排序方式。
+
+在最大堆中，父节点的值比每一个子节点的值都要大。在最小堆中，父节点的值比每一个子节点的值都要小。这就是所谓的“堆属性”，并且这个属性对堆中的每一个节点都成立。
+
+
+
+
+
+
+
+### 堆和普通树的区别
+
+节点顺序。在二叉搜索树中，左子节点必须比父节点小，右子节点必须必比父节点大。但是在堆中并非如此。在最大堆中两个子节点都必须比父节点小，而在最小堆中，它们都必须比父节点大。
+
+内存占用。普通树占用的内存空间比它们存储的数据要多。你必须为节点对象以及左/右子节点指针分配额为是我内存。堆仅仅使用一个数据来存储数组，且不使用指针。
+
+平衡。二叉搜索树必须是“平衡”的情况下，其大部分操作的复杂度才能达到O(log n)。你可以按任意顺序位置插入/删除数据，或者使用 AVL 树或者红黑树，但是在堆中实际上不需要整棵树都是有序的。我们只需要满足对属性即可，所以在堆中平衡不是问题。因为堆中数据的组织方式可以保证O(log n) 的性能。
+
+搜索。在二叉树中搜索会很快，但是在堆中搜索会很慢。在堆中搜索不是第一优先级，因为使用堆的目的是将最大（或者最小）的节点放在最前面，从而快速的进行相关插入、删除操作。
+
+
+
+### 堆的存储方式
+
+![img](image.assets/clip_image002.jpg)[ 10, 7, 2, 5, 1 ]
+
+如果 i 是节点的索引，那么下面的公式就给出了它的父节点和子节点在数组中的位置
+
+parent(i) = floor((i - 1)/2)
+
+left(i)  = 2i + 1
+
+right(i) = 2i + 2
+
+![img](image.assets/clip_image004-1604331000981.jpg)
+
+根节点(10)没有父节点，因为 -1 不是一个有效的数组索引。同样，节点 (2)，(5)和(1) 没有子节点，因为这些索引已经超过了数组的大小，所以我们在使用这些索引值的时候需要保证是有效的索引值。
+
+ 
+
+堆并不一定是有序数组！要将堆转换成有序数组，需要使用堆排序。
+
+堆中低层节点不一定小于高层节点！![img](image.assets/clip_image006.jpg)7<8
+
+### 两个保证插入或删除节点后依然是最大/小堆的方法
+
+shiftUp(): 如果一个节点比它的父节点大（最大堆）或者小（最小堆），那么需要将它同父节点交换位置。这样是这个节点在数组的位置上升。
+
+shiftDown(): 如果一个节点比它的子节点小（最大堆）或者大（最小堆），那么需要将它向下移动。这个操作也称作“堆化（heapify）”。
+
+shiftUp 或者 shiftDown 是一个递归的过程，所以它的时间复杂度是 O(log n)
+
+### 插入
+
+![img](image.assets/clip_image008.jpg)
+
+变成了[ 10, 7, 2, 5, 1, 16 ] ![img](image.assets/clip_image010.jpg)
+
+为了恢复堆属性,交换两次![img](image.assets/clip_image012.jpg)![img](image.assets/clip_image014.jpg)
+
+### 删除根节点
+
+![img](image.assets/clip_image016.jpg)
+
+此时顶部为空节点![img](image.assets/clip_image018.jpg)
+
+取出最后一个节点,代替空节点![img](image.assets/clip_image020.jpg)
+
+之后开始交换![img](image.assets/clip_image022.jpg)![img](image.assets/clip_image024.jpg)
+
+### 删除子节点
+
+remove() 的通用版本，它可能会使用到 shiftDown 和 shiftUp。
+
+[ 10, 7, 2, 5, 1 ]      删除7
+
+-> [ 10, 1, 2, 5, 7 ]   将最后的1与7交换,7就是需要返回的元素,用removeLast()删除,而1的位置不对,用shiftDown()调整位置
+
 
 
 
