--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -895,13 +895,13 @@ class Boss extends Handler {
 
 
 
-![image-20200907094120213](image.assets/策略.png)
+![](image.assets/策略.png)
 
 JDK8中 ,ThreadPoolExecutor的构造方法可以传入RejectedExecutionHandler拒绝策略接口
 
 拒绝策略是当有界队列满了时，拒绝添加到线程池
 
-```
+```java
 public ThreadPoolExecutor(int corePoolSize,
                           int maximumPoolSize,
                           long keepAliveTime,
@@ -916,7 +916,7 @@ public ThreadPoolExecutor(int corePoolSize,
 
 每个拒绝策略接口的实现类都封装了拒绝的算法 ,在构造方法中传入策略 ,从而使得线程池具有对应的算法
 
-```
+```java
 public static class AbortPolicy implements RejectedExecutionHandler {
 
     public AbortPolicy() { }
@@ -1053,8 +1053,14 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 
 
+进行建模时，首先确定系统边界，识别出主要用例，建模用例图
+
+然后对用例图中的复杂用例采用活动图进一步进行建模
+
+再对用例执行过程中对象如何通过消息相互交互进行建模
+
 * 结构图
-  * 类图
+  * 类图      系统的领域模型
   * 对象图
   * 包图
   * 组合结构图   2.0新增
@@ -1064,10 +1070,10 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 * 行为图
   * 用例图	系统与外部参与者交互
-  * 顺序图	强调时间顺序
+  * 顺序图	强调时间顺序     系统的交互关系
   * 通信图
   * 定时图    2.0新增
-  * 状态图
+  * 状态图    
   * 活动图
 
 
