--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -662,9 +662,14 @@ class CookingFood extends Cooking {
 
 ## 观察者(发布/订阅) Observer
 
-观察者与被观察者存在多对一关系 ,1个被观察者发生状态改变 ,将通知1~n个观察者 ，而Observer收到通知后，将查询Subject 的状态
+观察者与被观察者存在多对一关系 ,1个被观察者发生状态改变 ,将通知1~n个观察者 ，而Observer收到通知后，将查询Subject的状态
 
 
+
+* 适用场景
+  * 一个抽象模型有两个方面，其中一个方面依赖于另一个方面。将这两者封装在独立的对象中以使它们可以各自独立地改变和复用
+  * 当对一个对象的改变需要同时改变其他对象，而不知道具体有多少对象有待改变时
+  * 当一个对象必须通知其他对象，但不能假定其他对象是谁，即不希望这些对象是紧耦合的
 
 ```
 public class ObserverPattern {
