--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -1148,7 +1148,7 @@ public static class AbortPolicy implements RejectedExecutionHandler {
 
 ## 活动图
 
-
+==一个用例和多个对象的行为==
 
 ![image-20200906231024487](image.assets/image-20200906231024487.png)
 
@@ -1324,12 +1324,9 @@ extend:	转向执行另一个用例，执行完后返回之前的用例
 
 * 耦合
 
-数据耦合:两个模块彼此间通过数据参数交换信息
-
-标记耦合:一组模块通过参数表传递记录信息,这个记录是某一个数据结构的子记录,而不是简单变量
-
-控制耦合:两个模块彼此间传递的信息中有控制信息
-
-内容耦合:一个模块需要设计到另一个模块的内部信息
+  * 数据耦合:两个模块彼此间通过数据**参数**交换信息
+  * 标记耦合:通过**参数表**传递信息,这个记录是某一个**数据结构**的子记录,而不是简单变量
+  * 控制耦合:两个模块彼此间传递的信息中有控制信息
+  * 内容耦合:一个模块需要设计到另一个模块的内部信息
 
 <img src="image.assets/image-20200828094923940.png" alt="image-20200828094923940" style="zoom:150%;" />
