--- a/软件设计师/计算机网络.md
+++ b/软件设计师/计算机网络.md
@@ -9,7 +9,7 @@
 ## 应用层
 
 * 基于TCP
-  * POP3	110	离线接收邮件     
+  * POP3	110	离线接收邮件
   * FTP	上传20	下载21
 
   * http    80	超文本传输协议
@@ -53,7 +53,7 @@ UDP
 
 
 
-* ARP	地址解析协议     IP->MAC		RARP反向地址解析    MAC->IP**
+* ARP	地址解析协议     IP->MAC		RARP反向地址解析    MAC->IP
 
 * IP		网际协议
 
@@ -71,7 +71,7 @@ UDP
 
 * 网桥
 
-* **交换机	解决集线器存在的分流冲突问题 ,存在广播冲突问题**     ==多个冲突域,一个广播域==
+* **交换机	解决集线器存在的分流冲突问题,存在广播冲突问题**     ==多个冲突域,一个广播域==
 
 
 
@@ -85,7 +85,7 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 
 
-* 集线器Hub	用于分流 ,存在**冲突域**	==一个冲突域,一个广播域==
+* 集线器Hub	用于分流,存在**冲突域**	==一个冲突域,一个广播域==
 
 * 中继器       用于信号放大 ,延长网络传输距离限制
 
@@ -97,13 +97,11 @@ PPTP ,L2TP ,IP ,ICMP ,IGMP
 
 
 
-
-
 # TCP
 
 
 
-原本为TCP/IP(传输控制协议/网际协议)一个协议,之后又被拆分为单独运行的两个部分,以便为应用提供广泛的支持,以及允许任何主机与链路层协议互操作
+原本为TCP/IP(传输控制协议/网际协议)一个协议,之后又被拆分为单独的两个部分,以便提供广泛支持,以及允许任何主机与链路层协议互操作
 
  
 
@@ -343,9 +341,9 @@ C类	11000000-11011111	198-223
 
 <I>	斜体字
 
-alink		正在被点击的链接的颜色
+alink		正在被点击的链接颜色
 
-vlink		已使用的链接的颜色
+vlink		已使用的链接颜色
 
 background	背景图片
 
@@ -359,13 +357,13 @@ bgcolor	文档整体背景颜色
 
 
 
-发送数据	发送方==私钥签名==,接收方==公钥加密==
+发送数据	==发送方私钥签名,接收方公钥加密==
 
-接收数据	发送方==公钥验签==,接收方==私钥解密==
+接收数据	==发送方公钥验签,接收方私钥解密==
 
 
 
-==用证书来对用户的身份进行认证;使用签名确保消息不可否认==
+==用证书来对验证身份;使用签名确保消息不可否认==
 
 
 
@@ -467,15 +465,13 @@ SSL/HTTPS /PGP    跟邮件服务有关
 * 网络级防火墙
 
   * 包过滤	只检查**数据源和目的地的ip和端口**	安全性低
-  * 状态检测	依据**状态表** 
+  * 状态检测	依据**状态表**
 
 * 应用级防火墙
 
   * 双穴主机	外网->双穴主机->内网
   * 屏蔽主机	外网->屏蔽路由器->堡垒主机->内网
-  * 屏蔽子网** 	在外网与内网之间加入了**DMZ**
-
-
+  * 屏蔽子网 	在外网与内网之间加入了**DMZ**
 
 
 
@@ -491,13 +487,13 @@ SSL/HTTPS /PGP    跟邮件服务有关
 
 
 
-**漏洞扫描是另一种安全防护策略**,能检测ftp服务器中是否存在可写目录
+**漏洞扫描是另一种安全防护策略**,能检测ftp服务器中**是否存在可写目录**
 
 
 
 ## 病毒/木马
 
-* ==病毒	无需联网== 破坏计算机功能或数据 ,能自我复制
+* ==病毒	无需联网== 破坏计算机功能或数据,能自我复制
   * **蠕虫病毒     针对基础设施**(发电站等)    例如冲击波病毒
   * 引导区病毒   破坏电脑**引导盘/目录**
   * **宏病毒**       感染文档、数据库、电子表格等文件
@@ -512,14 +508,6 @@ SSL/HTTPS /PGP    跟邮件服务有关
 
 
 
- 
-
-
-
-
-
-# 题型
-
 
 
 
@@ -533,8 +521,6 @@ arp      查看arp缓存/解决地址解析问题
 tracert   跟踪网络连接,查看在哪段路由出现连通问题
 
  
-
-
 
 ## 路由类型
 
